k8s-audit/2025-08-13_full_claster/95-webhooks/validating.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: kube-prometheus-stack
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2025-07-22T22:37:51Z"
    generation: 2
    labels:
      app: kube-prometheus-stack-admission
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 75.15.0
      chart: kube-prometheus-stack-75.15.0
      heritage: Helm
      release: kube-prometheus-stack
    name: kube-prometheus-stack-admission
    resourceVersion: "1743322"
    uid: 8a88e8a5-35ba-46f0-b364-69a5724572b7
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkekNDQVJ5Z0F3SUJBZ0lSQUxLSExqWDBCTm1XVjBZNW0vMTVmVFF3Q2dZSUtvWkl6ajBFQXdJd0R6RU4KTUFzR0ExVUVDaE1FYm1sc01UQWdGdzB5TlRBM01qSXlNak15TkRaYUdBOHlNVEkxTURZeU9ESXlNekkwTmxvdwpEekVOTUFzR0ExVUVDaE1FYm1sc01UQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJHNkZzN2VnCmJlRnpEajBKa2RFR0J3OWxjaVE3M2ZHSkdaNVpiUFJtekZVcW5IUDZuU0x5OHBPSERpL3gxaERKRXMvSWpPSnkKYzc1Uk9SZitjYi9BTTRtalZ6QlZNQTRHQTFVZER3RUIvd1FFQXdJQ0JEQVRCZ05WSFNVRUREQUtCZ2dyQmdFRgpCUWNEQVRBUEJn [...]
      service:
        name: kube-prometheus-stack-operator
        namespace: monitoring
        path: /admission-prometheusrules/validate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: metallb
      meta.helm.sh/release-namespace: metallb-system
    creationTimestamp: "2025-07-22T22:30:54Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: metallb
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: metallb
      app.kubernetes.io/version: v0.15.2
      helm.sh/chart: metallb-0.15.2
    name: metallb-webhook-configuration
    resourceVersion: "12645"
    uid: 3adbb066-4aec-428e-a83c-e19b3fb24224
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta2-bgppeer
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bgppeervalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta2
      operations:
      - CREATE
      - UPDATE
      resources:
      - bgppeers
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-ipaddresspool
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: ipaddresspoolvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ipaddresspools
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-bgpadvertisement
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bgpadvertisementvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - bgpadvertisements
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-community
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: communityvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - communities
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-bfdprofile
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bfdprofilevalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - DELETE
      resources:
      - bfdprofiles
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTFNRGN5TWpJeE16RXdNbG9YRFRNMU1EY3lNREl5TXpFdwpNbG93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0xkZE5XSnliY0lGNy9EVEdkV2lNQnpYV0lkR1lia3labjYKblVOYTRqcEJQNzJnYkVLUFAvcDVLR0xDd2kybm1aQUh6TjhTTVprMmhseEpQU0NHalZXVkk4cG5uTnlOLzlqYwo3Y1JNeitTRDV4 [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-l2advertisement
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: l2advertisementvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - l2advertisements
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: ""
